rename basic to basic01 wip

--- a/Client/Containers/Container-Header.razor
+++ b/Client/Containers/Container-Header.razor
@@ -1,4 +1,4 @@
-@namespace ToSicCre8magic.Theme.Basic01
+@namespace ToSicCre8magic.Theme.Basic
 @inherits ContainerBase
 @inject ISettingService SettingService
 
@@ -20,7 +20,7 @@ else
 </div>
 
 @code {
-    public override string Name => "ToSicCre8magic Basic01 - Header";
+    public override string Name => "ToSicCre8magic Basic - Header";
 
     private bool _title = true;
 
