--- a/Client/Themes/Default.razor
+++ b/Client/Themes/Default.razor
@@ -1,4 +1,4 @@
-@namespace ToSicCre8magic.Theme.Basic01
+@namespace ToSicCre8magic.Theme.Basic
 @inherits ThemeBase
 @inject ISettingService SettingService
 
