--- a/Client/Themes/ThemeSettings.razor
+++ b/Client/Themes/ThemeSettings.razor
@@ -1,4 +1,4 @@
-@namespace ToSicCre8magic.Theme.Basic01
+@namespace ToSicCre8magic.Theme.Basic
 @inherits ModuleBase
 @implements Oqtane.Interfaces.ISettingsControl
 @inject ISettingService SettingService
@@ -43,7 +43,7 @@
 
     @code {
         private int pageId = -1;
-        private string resourceType = "ToSicCre8magic.Theme.Basic01.ThemeSettings, ToSicCre8magic.Theme.Basic01.Client.Oqtane"; // for localization
+        private string resourceType = "ToSicCre8magic.Theme.Basic.ThemeSettings, ToSicCre8magic.Theme.Basic.Client.Oqtane"; // for localization
         private string _scope = "page";
         private string _login = "-";
         private string _register = "-";
