--- a/Client/Containers/Container1.razor
+++ b/Client/Containers/Container1.razor
@@ -1,4 +1,4 @@
-@namespace ToSicCre8magic.Theme.Basic01
+@namespace ToSicCre8magic.Theme.Basic
 @inherits ContainerBase
 @inject ISettingService SettingService
 
@@ -21,7 +21,7 @@
 </div>
 
 @code {
-    public override string Name => "ToSicCre8magic Basic01 - Container";
+    public override string Name => "ToSicCre8magic Basic - Container";
 
     private bool _title = true;
     private string _classes = "container py-4";
