--- a/Client/Containers/Container-Main.razor
+++ b/Client/Containers/Container-Main.razor
@@ -21,7 +21,7 @@
 </div>
 
 @code {
-    public override string Name => "ToSicCre8magic Basic - Container";
+    public override string Name => "ToSicCre8magic Basic - Main Container";
 
     private bool _title = true;
     private string _classes = "container py-4";
