add page and site settings footer

--- a/Client/Containers/Container-Header.razor
+++ b/Client/Containers/Container-Header.razor
@@ -6,7 +6,7 @@
 {
 <div class="row px-4">
     <div class="d-flex flex-nowrap">
-        <ModuleActions /><h2><ModuleTitle /></h2>
+        <ModuleActions />
     </div>
     <hr class="app-rule" />
 </div>
@@ -22,7 +22,7 @@ else
 @code {
     public override string Name => "ToSicCre8magic Basic - Header";
 
-    private bool _title = true;
+    private bool _title = false;
 
     protected override void OnParametersSet()
     {
