--- a/Client/src/styles/components/_layout-default.scss
+++ b/Client/src/styles/components/_layout-default.scss
@@ -2,7 +2,7 @@
 /*  _layout-default.scss                     */
 /*-------------------------------------------*/
 /*           This file is part of:           */
-/*                 2ShineBS5                 */
+/*                 cre8magic                 */
 /*            https://2shine.org/            */
 /*-------------------------------------------*/
 /*  This file defines the default layout     */
