--- a/Client/Containers/Container-Main.razor
+++ b/Client/Containers/Container-Main.razor
@@ -7,7 +7,7 @@
     {
     <div class="row px-4">
         <div class="d-flex flex-nowrap">
-            <ModuleActions /><h2><ModuleTitle /></h2>
+            <ModuleActions />
         </div>
         <hr class="app-rule" />
     </div>
@@ -23,7 +23,7 @@
 @code {
     public override string Name => "ToSicCre8magic Basic - Main Container";
 
-    private bool _title = true;
+    private bool _title = false;
     private string _classes = "container py-4";
 
     protected override void OnParametersSet()
