--- a/Client/src/styles/components/_footer.scss
+++ b/Client/src/styles/components/_footer.scss
@@ -2,7 +2,7 @@
 /*  _footer.scss                             */
 /*-------------------------------------------*/
 /*           This file is part of:           */
-/*                 2ShineBS5                 */
+/*                cre8magic           ¨      */
 /*            https://2shine.org/            */
 /*-------------------------------------------*/
 /*  Styles for the footer section of the     */
