--- a/Client/src/styles/components/_layout-centered.scss
+++ b/Client/src/styles/components/_layout-centered.scss
@@ -2,7 +2,7 @@
 /*  _layout-centered.scss                    */
 /*-------------------------------------------*/
 /*           This file is part of:           */
-/*                 2ShineBS5                 */
+/*                cre8magic                  */
 /*            https://2shine.org/            */
 /*-------------------------------------------*/
 /*  This file defines and customizes         */
