--- a/Client/src/styles/components/_layout-fullscreen.scss
+++ b/Client/src/styles/components/_layout-fullscreen.scss
@@ -2,7 +2,7 @@
 /*  _layout-fullscreen.scss                  */
 /*-------------------------------------------*/
 /*           This file is part of:           */
-/*                 2ShineBS5                 */
+/*                 cre8magic                 */
 /*            https://2shine.org/            */
 /*-------------------------------------------*/
 /*  This file defines and customizes         */
