--- a/Client/Containers/Container-Main.razor
+++ b/Client/Containers/Container-Main.razor
@@ -3,19 +3,18 @@
 @inject ISettingService SettingService
 
 <div class="@_classes">
-    @if (_title && ModuleState.Title != "-")
+@*     @if (_title && ModuleState.Title != "-")
     {
     <div class="row px-4">
         <div class="d-flex flex-nowrap">
             <ModuleActions />
         </div>
-        <hr class="app-rule" />
     </div>
     }
     else
-    {
+    { *@
     <ModuleActions />
-    }
+    @* } *@
 
     <ModuleInstance />
 </div>
