--- a/Client/Themes/ThemeSettings.razor
+++ b/Client/Themes/ThemeSettings.razor
@@ -84,20 +84,20 @@
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingThemeColor">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThemeColor" aria-expanded="false" aria-controls="collapseThemeColor">
-                    @SharedLocalizer["Theme Color"]
+                    @SharedLocalizer["Theme Css"]
                 </button>
             </h2>
             <div id="collapseThemeColor" class="accordion-collapse collapse" aria-labelledby="headingThemeColor" data-bs-parent="#themeColorAccordion">
                 <div class="accordion-body">
                     <div class="row mb-1 align-items-center">
-                        <Label class="col-sm-3" For="themeColor" ResourceKey="ThemeColor" ResourceType="@resourceType" HelpText="Here you can insert your own theme color CSS.">Theme Color:</Label>
+                        <Label class="col-sm-3" For="themeCss" ResourceKey="ThemeCss" ResourceType="@resourceType" HelpText="Here you can insert your own Theme CSS.">Theme Color:</Label>
                         <div class="col-sm-9">
-                            <textarea id="themeColor" class="form-control" @bind="_themeColor" rows="2"></textarea>
+                            <textarea id="themeCss" class="form-control" @bind="_themeCss" rows="2"></textarea>
                             @if (_scope != "site")
                             {
                                 <div class="small text-muted">
                                     Site:
-                                    <pre>@_themeColorMerge</pre>
+                                    <pre>@_themeCssMerge</pre>
                                 </div>
                             }
                         </div>
@@ -116,12 +116,12 @@
     private string _login = "-";
     private string _register = "-";
     private string _footerHtml = "";
-    private string _themeColor = "";
+    private string _themeCss = "";
 
     private string _loginMerge = "";
     private string _registerMerge = "";
     private string _footerHtmlMerge = "";
-    private string _themeColorMerge = "";
+    private string _themeCssMerge = "";
 
 
     void ShowDefaultFooterHtml()
@@ -158,7 +158,7 @@
         _login = SettingService.GetSetting(settings, GetType().Namespace + ":Login", "-");
         _register = SettingService.GetSetting(settings, GetType().Namespace + ":Register", "-");
         _footerHtml = SettingService.GetSetting(settings, GetType().Namespace + ":FooterHtml", "");
-        _themeColor = SettingService.GetSetting(settings, GetType().Namespace + ":ThemeColor", "");
+        _themeCss = SettingService.GetSetting(settings, GetType().Namespace + ":ThemeCss", "");
 
         if (_scope == "page")
         {
@@ -166,7 +166,7 @@
             _loginMerge = SettingService.GetSetting(mergedSettings, GetType().Namespace + ":Login", "-");
             _registerMerge = SettingService.GetSetting(mergedSettings, GetType().Namespace + ":Register", "-");
             _footerHtmlMerge = SettingService.GetSetting(mergedSettings, GetType().Namespace + ":FooterHtml", "");
-            _themeColorMerge = SettingService.GetSetting(mergedSettings, GetType().Namespace + ":ThemeColor", "");
+            _themeCssMerge = SettingService.GetSetting(mergedSettings, GetType().Namespace + ":ThemeCss", "");
 
         }
         await Task.Yield();
@@ -195,6 +195,9 @@
                 ? await SettingService.GetSiteSettingsAsync(PageState.Site.SiteId)
                 : await SettingService.GetPageSettingsAsync(pageId);
 
+            var id = (_scope == "site") ? PageState.Site.SiteId : pageId;
+            var entityType = (_scope == "site") ? "Site" : "Page";
+
             if (_login != "-")
             {
                 settings = SettingService.SetSetting(settings, GetType().Namespace + ":Login", _login);
@@ -219,16 +222,18 @@
             }
             else
             {
-                await SettingService.DeleteSettingAsync(_scope, pageId, GetType().Namespace + ":FooterHtml");
+                await SettingService.DeleteSettingAsync(entityType, id, GetType().Namespace + ":FooterHtml");
+                settings.Remove(GetType().Namespace + ":FooterHtml");
             }
 
-            if (!string.IsNullOrEmpty(_themeColor))
+            if (!string.IsNullOrEmpty(_themeCss))
             {
-                settings = SettingService.SetSetting(settings, GetType().Namespace + ":ThemeColor", _themeColor);
+                settings = SettingService.SetSetting(settings, GetType().Namespace + ":ThemeCss", _themeCss);
             }
             else
             {
-                await SettingService.DeleteSettingAsync(_scope, pageId, GetType().Namespace + ":ThemeColor");
+                await SettingService.DeleteSettingAsync(entityType, id, GetType().Namespace + ":ThemeCss");
+                settings.Remove(GetType().Namespace + ":ThemeCss");
             }
 
             if (_scope == "site")
